--- a/testcode/templates/student-home-new.html
+++ b/testcode/templates/student-home-new.html
@@ -121,10 +121,10 @@
                       
                     <div class="classe">
                       
-                      <div class="margins"> Your classes </div>                           
+                      <div class="margins"> Your classes   <div class="btn-group in rightm"> <button class="btn" type="button" id="add-class" ><i class="icon-book" ></i> Add a class</button> </div> </div>                           
                           
 
-                        <div class="btn-group in rightm"> <button class="btn" type="button" id="add-class" ><i class="icon-book" ></i> Add a class</button> </div>
+                      
                     </div>
                     
                     <div id="listclass">
@@ -175,48 +175,7 @@
                                 
                  <div id="latest" >
                 
-                      <table border="0" id="latesttable">
-                             <tr>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Latest problems</li></ul>
-                                 </td>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Latest activity</li></ul>
-                                 </td>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Unsolved problems</li></ul>
-                                 </td>
-                            </tr>
-                            <tr>                                 
-                                 <td >
-                                       <ul class="inlatest">
-                                        <li class="tall"> <a href="#">6.01/Centered average </a></li>
-                                         <li class="tall"> <a href="#">6.01/Total sum </a></li>
-                                         <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                         <li class="tall"> <a href="#">6.01/Smart robot </a></li>
-                                      </ul>
-                                 </td>
-                                 <td>
-                                        <ul class="inlatest">
-                                        <li class="tall"> <a href="#">6.01/Centered average </a></li>
-                                        <li class="tall"> <a href="#">6.01/Total sum </a></li>
-                                        <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                      </ul>
-                                 </td>
-                                 <td>
-                                        <ul class="inlatest">
-                                        
-                                         <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                         <li class="tall"> <a href="#">6.01/Smart robot </a></li>
-                                        
-                                      </ul>
-                                 </td>
-                            </tr>
-                            
-                         </table>
+                         <p class="empty"> Click on the course name to see the list of lectures </p>
                 
                  </div>   
                     
@@ -232,12 +191,7 @@
          <!--  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!   -->
         
         
-        
-        <div id="footer">
-            
-            
-         </div>
-            
+ 
             
          
          
