--- a/testcode/templates/student-home.html
+++ b/testcode/templates/student-home.html
@@ -78,7 +78,7 @@
                   
                     <div class="navbar smalle">
                         <div class="navbar-inner">
-                               <a class="brand" href="#">Hi, Andrei Ivanov</a>
+                               <a class="brand" href="#">Hi,fnnf Ivanov</a>
                          </div>
                         </div>
                                <ul class="nav">
@@ -174,48 +174,7 @@
                                 
                  <div id="latest" >
                 
-                      <table border="0" id="latesttable">
-                             <tr>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Latest problems</li></ul>
-                                 </td>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Latest activity</li></ul>
-                                 </td>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Unsolved problems</li></ul>
-                                 </td>
-                            </tr>
-                            <tr>                                 
-                                 <td >
-                                       <ul class="inlatest">
-                                        <li class="tall"> <a href="#">6.01/Centered average </a></li>
-                                         <li class="tall"> <a href="#">6.01/Total sum </a></li>
-                                         <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                         <li class="tall"> <a href="#">6.01/Smart robot </a></li>
-                                      </ul>
-                                 </td>
-                                 <td>
-                                        <ul class="inlatest">
-                                        <li class="tall"> <a href="#">6.01/Centered average </a></li>
-                                        <li class="tall"> <a href="#">6.01/Total sum </a></li>
-                                        <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                      </ul>
-                                 </td>
-                                 <td>
-                                        <ul class="inlatest">
-                                        
-                                         <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                         <li class="tall"> <a href="#">6.01/Smart robot </a></li>
-                                        
-                                      </ul>
-                                 </td>
-                            </tr>
-                            
-                         </table>
+                      <p class="empty"> Click on the course name to see the list of lectures </p>
                 
                  </div>   
                     
@@ -231,12 +190,7 @@
          <!--  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!   -->
         
         
-        
-        <div id="footer">
-            
-            
-         </div>
-            
+      
             
          
          
