--- a/testcode/templates/teacher-home.html
+++ b/testcode/templates/teacher-home.html
@@ -22,7 +22,7 @@
       
       <style type="text/css">.CodeMirror {border: 1px solid #dfdfdf; border-bottom: 1px solid #dfdfdf;}</style>              
                
-     
+     <script type="text/javascript">gvChartInit();</script>
       
      
       <style>
@@ -196,48 +196,7 @@
                                 
                  <div id="latest" >
                     
-                      <table border="0" id="latesttable">
-                             <tr>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Latest problems</li></ul>
-                                 </td>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Your latest activity</li></ul>
-                                 </td>
-                                 <td>
-                                        <ul class="breadcrumb" >
-                                        <li>Latest student submissions</li></ul>
-                                 </td>
-                            </tr>
-                            <tr>                                 
-                                 <td >
-                                       <ul class="inlatest">
-                                        <li class="tall"> <a href="#">6.01/Centered average </a></li>
-                                         <li class="tall"> <a href="#">6.01/Total sum </a></li>
-                                         <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                         <li class="tall"> <a href="#">6.01/Smart robot </a></li>
-                                      </ul>
-                                 </td>
-                                 <td>
-                                        <ul class="inlatest">
-                                        <li class="tall"> <a href="#">6.01/Centered average </a></li>
-                                        <li class="tall"> <a href="#">6.01/Total sum </a></li>
-                                        <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                      </ul>
-                                 </td>
-                                 <td>
-                                        <ul class="inlatest">
-                                        
-                                         <li class="tall"> <a href="#">6.01/Integer sequence </a></li>
-                                         <li class="tall"> <a href="#">6.01/Smart robot </a></li>
-                                        
-                                      </ul>
-                                 </td>
-                            </tr>
-                            
-                         </table>
+                       <p class="empty"> Click on the course name to see the list of lectures </p>
                 
                  </div>   
                     
@@ -253,12 +212,7 @@
          <!--  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!   -->
         
         
-        
-        <div id="footer">
-            
-            
-         </div>
-            
+     
             
          
          
