--- a/testcode/templates/teacher-lecture.html
+++ b/testcode/templates/teacher-lecture.html
@@ -126,7 +126,7 @@
        <div class="lecturepage1" style="background-color:#f5f5f5" >
                   
                   <span style="font-size:16px; font-weight:900"> <ul class="breadcrumb">
-                                <li><a href="#">{{course.name}}</a> <span class="divider">/</span></li>
+                                <li><a href="/api/userhome#{{course.course_id}}">{{course.name}}</a> <span class="divider">/</span></li>
                                 <li class="active lectureelement" id="{{lecture.lecture_id}}">{{lecture.description}} </li>                              
                             </ul></span>
                    
