--- a/testcode/static/bootstrap/css/bootstrap.css
+++ b/testcode/static/bootstrap/css/bootstrap.css
@@ -24,9 +24,7 @@ section {
 audio,
 canvas,
 video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
+
 }
 
 audio:not([controls]) {
@@ -159,7 +157,7 @@ textarea {
   a[href^="#"]:after {
     content: "";
   }
-  pre,
+ 
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
@@ -951,8 +949,8 @@ address {
   line-height: 20px;
 }
 
-code,
-pre {
+code
+{
   padding: 0 3px 2px;
   font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
   font-size: 12px;
@@ -970,7 +968,7 @@ code {
   border: 1px solid #e1e1e8;
 }
 
-pre {
+/*pre {
   display: block;
   padding: 9.5px;
   margin: 0 0 10px;
@@ -986,13 +984,13 @@ pre {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
-}
+}*/
 
 pre.prettyprint {
   margin-bottom: 20px;
 }
 
-pre code {
+ code {
   padding: 0;
   color: inherit;
   white-space: pre;
@@ -1002,7 +1000,7 @@ pre code {
 }
 
 .pre-scrollable {
-  max-height: 340px;
+  max-height: 580px;
   overflow-y: scroll;
 }
 
