--- a/testcode/static/text.css
+++ b/testcode/static/text.css
@@ -397,7 +397,11 @@ width:270px;
       list-style: none;
      margin:0px;
 }
-
+#viewcode
+{
+  width:100%;
+  height:100%;
+}
 #latesttable.tr:first-child td
 {
       height:16px;    
@@ -491,7 +495,7 @@ table.jqplot-legend {
 {
     border-radius:6px; 
     padding: 5px;
-    
+    padding-top: 9px;
     position: relative;
     width: 336px;
     height: 26px;
@@ -508,7 +512,8 @@ table.jqplot-legend {
 #subms
 {
     float:right;
-    margin-top: 4px;
+    margin-top: 1px;
+    margin-right: 10px;
     
 }
 
