--- a/testcode/templates/Student.html
+++ b/testcode/templates/Student.html
@@ -114,7 +114,7 @@
                         <div class="classe1" id="path" >
                             
                             <ul class="breadcrumb" >
-                              <li ><a href="#"><span style="font-size:18px; font-weight:800">{{course.short_name}}</a> </span><span class="divider">/</span></li>
+                              <li ><a href="/api/userhome"><span style="font-size:18px; font-weight:800">{{course.short_name}}</a> </span><span class="divider">/</span></li>
                               <li class="active"> <span style="font-size:18px; font-weight:800"> {{lecture.description}}</span> </li>                          
                             </ul>
                             
@@ -124,8 +124,7 @@
                         <div id="yourcode">
                            
                             <div class="classe">
-                             <div class="margins">    Your code</div>
-                                <div id="subms">
+                             <div class="margins">    Your code <div id="subms">
                                    {% if hasPrev %}
 
                                     <div class="btn-group in"> <button class="btn changecode" type="button" id="previous"> <i class="icon-ok icon-chevron-left"></i> Previous</button> </div>
@@ -135,6 +134,8 @@
                                    <span style="font-size:15px; margin-top:-2px;">  Submissions </span>
                                      <div class="btn-group in"><button class="btn changecode disabled" type="button" id="next" >Next <i class="icon-ok icon-chevron-right"></i></button> </div> 
                                 </div>
+                              </div>
+                                
                              
                             </div>
                             
@@ -157,7 +158,11 @@
                             </div>
                             
                             <div class="well well-small" id="feedback">
-                               <br/>Press "Save & Run" to see your results.<br/>
+    <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">
+  simple collapsible
+</button>
+ 
+<div id="demo" class="collapse">xzczxcxzcxzzxczxczxcxz</div>
                             </div>
                         </div>
                     
@@ -173,19 +178,14 @@
                                       indentUnit: 4,
                                       tabMode: "shift",
                                       matchBrackets: true
-                                     });
-                                     
-
-  
-                                      
-                                  </script>                                              
+                                     });  </script>                                              
                         </div>
                         
                         
                     </div>
                     <div id="containerbottom">                         
                               <div id="save"> 
-                                 <div class="btn-group in"> <button class="btn btn-success" type="button"> <i class="icon-ok icon-white"></i> Save & Run</button> </div>                                
+                                 <div class="btn-group in"> <button class="btn btn-success" type="button" id="run"> <i class="icon-ok icon-white"></i> Save & Run</button> </div>                                
                                  <div class="btn-group in"> <button class="btn btn-danger" type="button" id="reset1"><i class="icon-refresh icon-white"></i> Reset</button> </div>
                               </div>
                         
@@ -205,7 +205,7 @@
         
         
         
-        <div id="footer">
+      
             
             
       
