--- a/testcode/templates/Student.html
+++ b/testcode/templates/Student.html
@@ -35,10 +35,10 @@
 
     <script>  $(document).ready(function(){
             $("#description").slimScroll({
-                height: '258px'
+                height: '358px'
                 })             
             $("#feedback").slimScroll({
-                height: '300px'
+                height: '200px'
                 })
       });
             </script> 
@@ -47,7 +47,23 @@
   </head>
   <body>
     
-       
+       <div id="viewtest"  title="Test case details"> 
+          <p style="font-weight:900; color:#AB1700" id="forwrong"> </p>
+          <p style="font-weight:900; color:#008A05" id="forcorr"> </p>
+           <table style="border:1px solid #D1D1D1">
+            <tr>
+               <td style="width:auto; font-weight:900; padding:7px; vertical-align:top; border:1px solid #D1D1D1">  Input  </td>  
+               <td style="width:auto; font-weight:900;padding:7px; vertical-align:top; border:1px solid #D1D1D1">  Your output </td>  
+                <td style="width:auto; font-weight:900; padding:7px; vertical-align:top; border:1px solid #D1D1D1">  Correct output </td> 
+            </tr>
+            <tr>  
+              <td style="width:auto; padding:7px; vertical-align:top; border:1px solid #D1D1D1"> <pre class="prettyprint" id="in"></pre>  </td>  
+               <td style="width:auto; padding:7px; vertical-align:top; border:1px solid #D1D1D1"> <pre class="prettyprint" id="yourout"></pre>  </td>  
+                <td style="width:auto; padding:7px; vertical-align:top; border:1px solid #D1D1D1"> <pre class="prettyprint" id="corrout"></pre>  </td> 
+             </tr>
+          </table>  
+
+  </div>
     
     
     
@@ -110,15 +126,11 @@
                     
                     <div id="containertop">
                         
-                        
-                        <div class="classe1" id="path" >
-                            
-                            <ul class="breadcrumb" >
-                              <li ><a href="/api/userhome"><span style="font-size:18px; font-weight:800">{{course.short_name}}</a> </span><span class="divider">/</span></li>
-                              <li class="active"> <span style="font-size:18px; font-weight:800"> {{lecture.description}}</span> </li>                          
-                            </ul>
-                            
-                        </div>
+                      <div class="classe1" id="path" >
+                                <div class="margins"> <a href="/api/userhome"><span style="font-size:17px; color:#D5F5AE">{{course.short_name}}</span></a><span class="divider">/</span>  {{lecture.description}} </div>                               
+                                                            
+                             </div>
+                      
                     
                     
                         <div id="yourcode">
@@ -158,11 +170,7 @@
                             </div>
                             
                             <div class="well well-small" id="feedback">
-    <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">
-  simple collapsible
-</button>
- 
-<div id="demo" class="collapse">xzczxcxzcxzzxczxczxcxz</div>
+                                <div id="insidefeedback">  Press "Save & Run" to see your results.</div>
                             </div>
                         </div>
                     
@@ -185,7 +193,7 @@
                     </div>
                     <div id="containerbottom">                         
                               <div id="save"> 
-                                 <div class="btn-group in"> <button class="btn btn-success" type="button" id="run"> <i class="icon-ok icon-white"></i> Save & Run</button> </div>                                
+                                 <div class="btn-group in"> <button class="btn btn-success" type="button" id="run"  data-loading-text="Running..."> <i class="icon-ok icon-white"></i> Save & Run</button> </div>                                
                                  <div class="btn-group in"> <button class="btn btn-danger" type="button" id="reset1"><i class="icon-refresh icon-white"></i> Reset</button> </div>
                               </div>
                         
