--- a/testcode/templates/Student.html
+++ b/testcode/templates/Student.html
@@ -16,7 +16,7 @@
       <script src="/static/code/lib/matchbrackets.js"></script>
       <script src="/static/code/python.js"></script>
       <script type="text/javascript" src="/static/java.js"></script>
-          
+            <script type="text/javascript" src="/static/account.js"></script>
     <link rel="stylesheet" href="/static/j-query.css" />
       <script type="text/javascript" src="/static/scroll/jquery.slimscroll.min.js"></script>
       
@@ -47,6 +47,24 @@
   </head>
   <body>
     
+<div id="account1" title="Manage your account">
+  <p class="validateTips" id="account_message_box"> </p>
+ 
+  <form> 
+  <fieldset>
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" />
+    <label for="email">Email</label>
+    <input type="text" name="email" id="email" value="" class="text ui-widget-content ui-corner-all" />
+    <label for="password">New password</label>
+    <input type="password" name="password" id="passwordn" value="" class="text ui-widget-content ui-corner-all" />
+    <label for="password">Current password</label>
+    <input type="password" name="password" id="password" value="" class="text ui-widget-content ui-corner-all" />
+  </fieldset>
+  </form>
+</div>
+
+
        <div id="viewtest"  title="Test case details"> 
           <p style="font-weight:900; color:#AB1700" id="forwrong"> </p>
           <p style="font-weight:900; color:#008A05" id="forcorr"> </p>
@@ -127,7 +145,7 @@
                     <div id="containertop">
                         
                       <div class="classe1" id="path" >
-                                <div class="margins"> <a href="/api/userhome"><span style="font-size:17px; color:#D5F5AE">{{course.short_name}}</span></a><span class="divider">/</span>  {{lecture.description}} </div>                               
+                                <div class="margins"> <a href="/testcode/api/userhome"><span style="font-size:17px; color:#D5F5AE">{{course.short_name}}</span></a><span class="divider">/</span>  {{lecture.description}} </div>                               
                                                             
                              </div>
                       
