--- a/testcode/templates/student-home.html
+++ b/testcode/templates/student-home.html
@@ -78,7 +78,7 @@
                   
                     <div class="navbar smalle">
                         <div class="navbar-inner">
-                               <a class="brand" href="#">Hi,fnnf Ivanov</a>
+                               <a class="brand" href="#">Hi, Andrei Ivanov</a>
                          </div>
                         </div>
                                <ul class="nav">
