--- a/testcode/templates/teacher-lecture.html
+++ b/testcode/templates/teacher-lecture.html
@@ -19,7 +19,7 @@
       <script type="text/javascript" src="/static/teacher-lecture.js"></script>
     <link rel="stylesheet" href="/static/j-query.css" />
       <script type="text/javascript" src="/static/scroll/jquery.slimscroll.min.js"></script>
-      
+        <script type="text/javascript" src="/static/account.js"></script>
       <style type="text/css">.CodeMirror {border: 1px solid #dfdfdf; border-bottom: 1px solid #dfdfdf;}</style>              
                
      
@@ -46,6 +46,23 @@
   
   </head>
   <body>
+
+<div id="account1" title="Manage your account">
+  <p class="validateTips" id="account_message_box"> </p>
+ 
+  <form> 
+  <fieldset>
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" />
+    <label for="email">Email</label>
+    <input type="text" name="email" id="email" value="" class="text ui-widget-content ui-corner-all" />
+    <label for="password">New password</label>
+    <input type="password" name="password" id="passwordn" value="" class="text ui-widget-content ui-corner-all" />
+    <label for="password">Current password</label>
+    <input type="password" name="password" id="password" value="" class="text ui-widget-content ui-corner-all" />
+  </fieldset>
+  </form>
+</div>
     
 <div id="dialog-formproblem"  title="Create a problem">
      <p class="validateTips" id="problem_message_box"></p>
@@ -126,7 +143,7 @@
        <div class="lecturepage1" style="background-color:#f5f5f5" >
                   
                   <span style="font-size:16px; font-weight:900"> <ul class="breadcrumb">
-                                <li><a href="/api/userhome#{{course.course_id}}">{{course.name}}</a> <span class="divider">/</span></li>
+                                <li><a href="/testcode/api/userhome#{{course.course_id}}">{{course.name}}</a> <span class="divider">/</span></li>
                                 <li class="active lectureelement" id="{{lecture.lecture_id}}">{{lecture.description}} </li>                              
                             </ul></span>
                    
